--- a/2020/day5/day5.ipynb
+++ b/2020/day5/day5.ipynb
@@ -23,28 +23,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "997\n"
+     ]
+    }
+   ],
    "source": [
     "f = open(\"day5input.txt\", \"r\")\n",
     "text = f.read()\n",
     "boaridng_pass = text.split(\"\\n\")\n",
-    "#print(boaridng_pass)\n",
-    "rrange_row = 128\n",
-    "mmin_row = 0\n",
-    "mmax_row = 127\n",
-    "row = 0\n",
-    "rrange_col = 8\n",
-    "mmin_col = 0\n",
-    "mmax_col = 7\n",
-    "col = 0\n",
     "seat_id_list = []\n",
     "\n",
-    "\n",
     "for i in boaridng_pass:\n",
+    "    rrange_row = 128\n",
+    "    mmin_row = 0\n",
+    "    mmax_row = 127\n",
+    "    row = 0\n",
+    "    rrange_col = 8\n",
+    "    mmin_col = 0\n",
+    "    mmax_col = 7\n",
+    "    col = 0\n",
     "    for char in i:\n",
     "        if char == \"F\":\n",
     "            rrange_row //= 2\n",
@@ -66,7 +72,9 @@
     "            col = mmax_col\n",
     "    seat_id = (row * 8) + 5\n",
     "    seat_id_list.append(seat_id)\n",
+    "    mmax_id = max(seat_id_list)\n",
     "\n",
+    "print(mmax_id)\n",
     "\n",
     "\n",
     "\n"
